binsard/tests/compile_fail/unsupported_option_inner_type.stderr
error: binsard: array length is not a literal
 --> tests/compile_fail/unsupported_option_inner_type.rs:5:24
  |
5 |     value: Option<[u8; 1 + 1]>,
  |                        ^
